# HexMatch

./: LICENSE  README.md  config.txt  functions.py  main.py  pyproject.toml
src/: functions.py  hexmatch.spec  main.py
