[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twin-file-detective"
version = "0.1.0"
description = "A tool for finding and deleting copies of files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "xxhash>=3.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main", "functions"]

[project.scripts]
twin-file-detective = "main:main"