[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexmatch"
version = "1.0.0"
description = "A tool for finding copies of files using its hex values"
readme = "README.md"
requires-python = ">=3.13" 
dependencies = [
    "send2trash>=2.1.0",
    "xxhash>=3.0.0",
]

[project.scripts]
hexmatch = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main", "functions"]

[tool.uv]
python-preference = "managed"
environments = ["PYTHON_GIL=0"]
